[gd_scene load_steps=58 format=3 uid="uid://cp4tsdihiexek"]

[ext_resource type="Script" uid="uid://q3eoe1jne7kw" path="res://C# Classes/Secret/BossStageManager.cs" id="1_7bv37"]
[ext_resource type="Script" uid="uid://bim586pwyxbcj" path="res://Scenes/MainScenes/BossUI.gd" id="2_7bv37"]
[ext_resource type="Texture2D" uid="uid://ie733wtodtxo" path="res://Assets/Enemies/Untitled_Artwork-1.png" id="2_o4roe"]
[ext_resource type="Script" uid="uid://big83cmg6df2y" path="res://C# Classes/Secret/Extras/BossDialogueManager.cs" id="2_ymsrg"]
[ext_resource type="Texture2D" uid="uid://evgdtdp2pvkt" path="res://Assets/Enemies/priestess.png" id="3_gggqq"]
[ext_resource type="Script" uid="uid://d0gboknna2m22" path="res://Scenes/MainScenes/BuildBarManager.gd" id="3_jd04r"]
[ext_resource type="Texture2D" uid="uid://bhv2d37pncikm" path="res://Assets/Enemies/Untitled_Artwork-2.png" id="3_o3048"]
[ext_resource type="FontFile" uid="uid://d0jwvllp2ku3i" path="res://Assets/Fonts/OptimusPrinceps.ttf" id="4_0q0yg"]
[ext_resource type="Texture2D" uid="uid://ccmbrc832q733" path="res://Assets/UI/Buttons/button_square_depth_gradient.png" id="4_kourl"]
[ext_resource type="Texture2D" uid="uid://hn3sj1vi6nik" path="res://Assets/Enemies/Untitled_Artwork-3.png" id="4_vhtei"]
[ext_resource type="Texture2D" uid="uid://dw5dkuhgw5g1t" path="res://Assets/Enemies/Untitled_Artwork-4.png" id="5_45d4v"]
[ext_resource type="Texture2D" uid="uid://cecy4rgv45ed" path="res://Assets/UI/Buttons/button_square_flat.png" id="5_msd52"]
[ext_resource type="Texture2D" uid="uid://4uwlbr353gdc" path="res://Assets/Enemies/Untitled_Artwork-5.png" id="6_00y0d"]
[ext_resource type="Texture2D" uid="uid://c38f4yytye8ga" path="res://Assets/UI/Buttons/button_square_depth_flat.png" id="6_064ww"]
[ext_resource type="Texture2D" uid="uid://dcw0ohdkpaccy" path="res://Assets/Towers/RangedTower1_turret.png" id="7_hvuvc"]
[ext_resource type="Texture2D" uid="uid://bflqxgojh0114" path="res://Assets/Enemies/Untitled_Artwork-6.png" id="7_msgqv"]
[ext_resource type="Texture2D" uid="uid://ch8ge73turbvd" path="res://Assets/Enemies/Untitled_Artwork-7.png" id="8_58us1"]
[ext_resource type="Texture2D" uid="uid://cntcgyt8s5788" path="res://Assets/Towers/RangedTower2_turret.png" id="8_o64v5"]
[ext_resource type="Texture2D" uid="uid://c2cnvryg63f23" path="res://Assets/Enemies/Untitled_Artwork-8.png" id="9_oyq5m"]
[ext_resource type="Texture2D" uid="uid://djsms1ysch5w6" path="res://Assets/Towers/Obstacle1_base.png" id="9_yvg1w"]
[ext_resource type="Texture2D" uid="uid://41i2e76d22bw" path="res://Assets/Towers/MeleeTower1_base.png" id="10_2puma"]
[ext_resource type="Texture2D" uid="uid://cmrlhcxngppww" path="res://Assets/Enemies/Untitled_Artwork-9.png" id="10_0068y"]
[ext_resource type="Texture2D" uid="uid://dsqi22hhu1cq3" path="res://Assets/Enemies/Untitled_Artwork-10.png" id="11_am23t"]
[ext_resource type="Texture2D" uid="uid://c3ihmkr4oh0gx" path="res://Assets/Towers/RangedTowerGirl1_icon.png" id="11_ymsrg"]
[ext_resource type="Texture2D" uid="uid://dscw14lp4fqsv" path="res://Assets/Towers/RangedTowerGirl2_icon.png" id="12_lj1pt"]
[ext_resource type="Texture2D" uid="uid://biyivljupftby" path="res://Assets/Enemies/Untitled_Artwork-11.png" id="12_p3j78"]
[ext_resource type="Texture2D" uid="uid://fpt6s3th4nfq" path="res://Assets/Enemies/Untitled_Artwork-12.png" id="13_eafx7"]
[ext_resource type="Texture2D" uid="uid://x3mjf6tyivs5" path="res://Assets/Towers/RangedTowerBoy1_icon.png" id="13_gggqq"]
[ext_resource type="Texture2D" uid="uid://cpgvln6ng35fw" path="res://Assets/Enemies/Untitled_Artwork-13.png" id="14_eoytj"]
[ext_resource type="Texture2D" uid="uid://u3hjd5lglscr" path="res://Assets/Enemies/Untitled_Artwork-14.png" id="15_0mi5f"]
[ext_resource type="Texture2D" uid="uid://p5r8g8bpef3a" path="res://Assets/UI/HPbar.jpg" id="15_2fqkj"]
[ext_resource type="Texture2D" uid="uid://basx3pfclnkuf" path="res://Assets/Enemies/Untitled_Artwork-15.png" id="16_2pnfn"]
[ext_resource type="FontFile" uid="uid://br1g4yrtam3xr" path="res://Assets/Fonts/m6x11.ttf" id="16_otjwt"]
[ext_resource type="Texture2D" uid="uid://bf24iovfi83ej" path="res://Assets/Enemies/Untitled_Artwork-16.png" id="17_fkt1m"]
[ext_resource type="Texture2D" uid="uid://d2ghinnku76lx" path="res://Assets/Icons/return.png" id="17_od0sx"]
[ext_resource type="Texture2D" uid="uid://dknmpl7du0ofw" path="res://Assets/Enemies/PRTS.png" id="17_w277s"]
[ext_resource type="Texture2D" uid="uid://cye4s3lnr31gu" path="res://Assets/Towers/ChickenDon_icon.png" id="18_jd04r"]
[ext_resource type="Texture2D" uid="uid://cbjlns7vbni6b" path="res://Assets/Enemies/Untitled_Artwork-17.png" id="18_pxsi3"]
[ext_resource type="Texture2D" uid="uid://crp3r2xqp5tc3" path="res://Assets/Icons/fastForward.png" id="18_spupq"]
[ext_resource type="Texture2D" uid="uid://w3koertuxglx" path="res://Assets/Icons/pause.png" id="19_78aft"]
[ext_resource type="Texture2D" uid="uid://dwilvdv2bv78k" path="res://Assets/Enemies/Untitled_Artwork-18.png" id="19_vf2ui"]
[ext_resource type="Texture2D" uid="uid://d2ddhnm21a5gn" path="res://Assets/Icons/fastForward_red.png" id="20_0q0yg"]
[ext_resource type="Texture2D" uid="uid://dhduwqft65wt4" path="res://Assets/Enemies/Untitled_Artwork-19.png" id="20_q6tmu"]
[ext_resource type="Texture2D" uid="uid://b52i1tf2w03ea" path="res://Assets/Icons/forward.png" id="20_rr8m3"]
[ext_resource type="Texture2D" uid="uid://dx8ew2mf4kaq0" path="res://Assets/Enemies/Untitled_Artwork-20.png" id="21_15j46"]
[ext_resource type="Texture2D" uid="uid://c7qwb5igpiado" path="res://Assets/Enemies/Untitled_Artwork-21.png" id="22_fm0q7"]
[ext_resource type="Script" uid="uid://b6nu2v0k46sfg" path="res://Scenes/MainScenes/TowerUI.cs" id="22_gggqq"]
[ext_resource type="Script" uid="uid://s6nxfft1rx52" path="res://Scenes/MainScenes/DPManager.gd" id="23_otjwt"]
[ext_resource type="Texture2D" uid="uid://cqi7srcfbmme3" path="res://Assets/Enemies/Untitled_Artwork-22.png" id="23_shyfe"]
[ext_resource type="Texture2D" uid="uid://cmdjem2s6t8vw" path="res://Assets/Enemies/Untitled_Artwork-23.png" id="24_6jel5"]
[ext_resource type="Texture2D" uid="uid://6vymivko8r7s" path="res://Assets/Enemies/Untitled_Artwork-24.png" id="25_uopeb"]
[ext_resource type="Texture2D" uid="uid://h5g1u7n8ixm4" path="res://Assets/Icons/trashcan.png" id="26_od0sx"]
[ext_resource type="Texture2D" uid="uid://ciaxppxnws426" path="res://Assets/Icons/trashcanOpen_red.png" id="27_spupq"]
[ext_resource type="Texture2D" uid="uid://b7hgqo11wju8m" path="res://Assets/Icons/trashcanOpen.png" id="28_78aft"]
[ext_resource type="Texture2D" uid="uid://qjrcgqdphc0w" path="res://Assets/Icons/cross.png" id="32_8qiig"]
[ext_resource type="PackedScene" uid="uid://crbv7a1q6kijt" path="res://EndGameScreen.tscn" id="34_2fqkj"]

[sub_resource type="SpriteFrames" id="SpriteFrames_gx7g8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_o4roe")
}, {
"duration": 1.0,
"texture": ExtResource("3_o3048")
}, {
"duration": 1.0,
"texture": ExtResource("4_vhtei")
}, {
"duration": 1.0,
"texture": ExtResource("5_45d4v")
}, {
"duration": 1.0,
"texture": ExtResource("6_00y0d")
}, {
"duration": 1.0,
"texture": ExtResource("7_msgqv")
}, {
"duration": 1.0,
"texture": ExtResource("8_58us1")
}, {
"duration": 1.0,
"texture": ExtResource("9_oyq5m")
}, {
"duration": 1.0,
"texture": ExtResource("10_0068y")
}, {
"duration": 1.0,
"texture": ExtResource("11_am23t")
}, {
"duration": 1.0,
"texture": ExtResource("12_p3j78")
}, {
"duration": 1.0,
"texture": ExtResource("13_eafx7")
}, {
"duration": 1.0,
"texture": ExtResource("14_eoytj")
}, {
"duration": 1.0,
"texture": ExtResource("15_0mi5f")
}, {
"duration": 1.0,
"texture": ExtResource("16_2pnfn")
}, {
"duration": 1.0,
"texture": ExtResource("17_fkt1m")
}, {
"duration": 1.0,
"texture": ExtResource("18_pxsi3")
}, {
"duration": 1.0,
"texture": ExtResource("19_vf2ui")
}, {
"duration": 1.0,
"texture": ExtResource("20_q6tmu")
}, {
"duration": 1.0,
"texture": ExtResource("21_15j46")
}, {
"duration": 1.0,
"texture": ExtResource("22_fm0q7")
}, {
"duration": 1.0,
"texture": ExtResource("23_shyfe")
}, {
"duration": 1.0,
"texture": ExtResource("24_6jel5")
}, {
"duration": 1.0,
"texture": ExtResource("25_uopeb")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_7bv37")

[node name="Animations" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="Animations"]
offset_right = 1280.0
offset_bottom = 800.0

[node name="Animation" type="AnimatedSprite2D" parent="Animations"]
process_mode = 3
position = Vector2(640, 400)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_gx7g8")

[node name="Cutscenes" type="CanvasLayer" parent="."]
process_mode = 3
visible = false
script = ExtResource("2_ymsrg")

[node name="Images" type="TextureRect" parent="Cutscenes"]
offset_right = 2560.0
offset_bottom = 1600.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_gggqq")

[node name="Panel" type="Panel" parent="Cutscenes"]
offset_top = 605.0
offset_right = 1281.0
offset_bottom = 799.0

[node name="Dialogues" type="Label" parent="Cutscenes/Panel"]
layout_mode = 0
offset_left = 58.0
offset_top = 49.0
offset_right = 1214.0
offset_bottom = 146.0
theme_override_fonts/font = ExtResource("4_0q0yg")
theme_override_font_sizes/font_size = 60
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("2_7bv37")

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="BuildBar" type="HBoxContainer" parent="UI/HUD"]
layout_direction = 2
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -85.0
offset_right = 180.0
grow_vertical = 0
theme_override_constants/separation = 10
script = ExtResource("3_jd04r")

[node name="RangedTower1" type="TextureButton" parent="UI/HUD/BuildBar" groups=["tower_options"]]
visible = false
custom_minimum_size = Vector2(85, 85)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("4_kourl")
texture_pressed = ExtResource("5_msd52")
texture_hover = ExtResource("6_064ww")
stretch_mode = 4

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/RangedTower1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_hvuvc")

[node name="RangedTower2" type="TextureButton" parent="UI/HUD/BuildBar" groups=["tower_options"]]
visible = false
custom_minimum_size = Vector2(85, 85)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("4_kourl")
texture_pressed = ExtResource("5_msd52")
texture_hover = ExtResource("6_064ww")
stretch_mode = 4

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/RangedTower2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_o64v5")

[node name="Obstacle1" type="TextureButton" parent="UI/HUD/BuildBar" groups=["tower_options"]]
visible = false
custom_minimum_size = Vector2(85, 85)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("4_kourl")
texture_pressed = ExtResource("5_msd52")
texture_hover = ExtResource("6_064ww")
stretch_mode = 4

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/Obstacle1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 14.0
offset_right = 110.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("9_yvg1w")
expand_mode = 2
stretch_mode = 4

[node name="MeleeTower1" type="TextureButton" parent="UI/HUD/BuildBar" groups=["tower_options"]]
visible = false
custom_minimum_size = Vector2(85, 85)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("4_kourl")
texture_pressed = ExtResource("5_msd52")
texture_hover = ExtResource("6_064ww")
stretch_mode = 4

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/MeleeTower1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 14.0
offset_right = 110.0
offset_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("10_2puma")
expand_mode = 2
stretch_mode = 4

[node name="RangedTowerGirl1" type="TextureButton" parent="UI/HUD/BuildBar" groups=["tower_options"]]
visible = false
custom_minimum_size = Vector2(85, 85)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("4_kourl")
texture_pressed = ExtResource("5_msd52")
texture_hover = ExtResource("6_064ww")
stretch_mode = 4

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/RangedTowerGirl1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 2.0
offset_right = 168.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("11_ymsrg")
expand_mode = 2
stretch_mode = 4

[node name="RangedTowerGirl2" type="TextureButton" parent="UI/HUD/BuildBar" groups=["tower_options"]]
visible = false
custom_minimum_size = Vector2(85, 85)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("4_kourl")
texture_pressed = ExtResource("5_msd52")
texture_hover = ExtResource("6_064ww")
stretch_mode = 4

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/RangedTowerGirl2"]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 255.0
offset_bottom = 254.0
scale = Vector2(0.3, 0.3)
texture = ExtResource("12_lj1pt")
expand_mode = 2
stretch_mode = 4

[node name="RangedTowerBoy1" type="TextureButton" parent="UI/HUD/BuildBar" groups=["tower_options"]]
visible = false
custom_minimum_size = Vector2(85, 85)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture_normal = ExtResource("4_kourl")
texture_pressed = ExtResource("5_msd52")
texture_hover = ExtResource("6_064ww")
stretch_mode = 4

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/RangedTowerBoy1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 2.0
offset_right = 168.0
offset_bottom = 167.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.3, 0.3)
texture = ExtResource("13_gggqq")
expand_mode = 2
stretch_mode = 4

[node name="InfoBar" type="ColorRect" parent="UI/HUD"]
self_modulate = Color(0, 0, 0, 0.392157)
custom_minimum_size = Vector2(0, 60)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 128.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HUD/InfoBar"]
layout_mode = 0
offset_left = 805.0
offset_top = 34.0
offset_right = 1205.0
offset_bottom = 94.0
scale = Vector2(0.8, 1)
theme_override_constants/separation = 20

[node name="BaseHPBar" type="TextureProgressBar" parent="UI/HUD/InfoBar/HBoxContainer"]
custom_minimum_size = Vector2(400, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 5.0
value = 5.0
nine_patch_stretch = true
texture_under = ExtResource("15_2fqkj")
texture_progress = ExtResource("15_2fqkj")
tint_under = Color(0.215686, 0.215686, 0.215686, 1)
tint_progress = Color(0.305882, 1, 0.0823529, 1)

[node name="BossBars" type="VBoxContainer" parent="UI/HUD/InfoBar"]
layout_mode = 0
offset_left = 151.0
offset_top = 25.0
offset_right = 551.0
offset_bottom = 105.0
scale = Vector2(0.8, 1)
theme_override_constants/separation = 20

[node name="Priestess" type="TextureProgressBar" parent="UI/HUD/InfoBar/BossBars"]
custom_minimum_size = Vector2(400, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 5.0
value = 5.0
nine_patch_stretch = true
texture_under = ExtResource("15_2fqkj")
texture_progress = ExtResource("15_2fqkj")
tint_under = Color(0.215686, 0.215686, 0.215686, 1)
tint_progress = Color(0.305882, 1, 0.0823529, 1)

[node name="Prts" type="TextureProgressBar" parent="UI/HUD/InfoBar/BossBars"]
custom_minimum_size = Vector2(400, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 5.0
value = 5.0
nine_patch_stretch = true
texture_under = ExtResource("15_2fqkj")
texture_progress = ExtResource("15_2fqkj")
tint_under = Color(0.215686, 0.215686, 0.215686, 1)
tint_progress = Color(0.305882, 1, 0.0823529, 1)

[node name="PrtsShield" type="TextureProgressBar" parent="UI/HUD/InfoBar"]
custom_minimum_size = Vector2(160, 30)
layout_mode = 2
offset_left = 151.0
offset_top = 75.0
offset_right = 301.0
offset_bottom = 105.0
size_flags_horizontal = 4
size_flags_vertical = 4
max_value = 4000.0
value = 5.0
nine_patch_stretch = true
texture_under = ExtResource("15_2fqkj")
texture_progress = ExtResource("15_2fqkj")
tint_under = Color(0.305882, 1, 0.0823529, 1)
tint_progress = Color(0.4018, 0.787267, 0.98, 1)

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/HUD/InfoBar"]
layout_mode = 0
offset_left = 149.0
offset_top = 6.0
offset_right = 549.0
offset_bottom = 49.0
scale = Vector2(0.8, 1)
theme_override_constants/separation = 20

[node name="Tower Count Label" type="Label" parent="UI/HUD/InfoBar"]
layout_direction = 2
layout_mode = 2
offset_left = 521.0
offset_top = 60.0
offset_right = 711.0
offset_bottom = 87.0
theme_override_fonts/font = ExtResource("16_otjwt")
theme_override_font_sizes/font_size = 30
text = "Tower count:"

[node name="Tower Count" type="Label" parent="UI/HUD/InfoBar"]
layout_direction = 2
layout_mode = 0
offset_left = 687.0
offset_top = 62.0
offset_right = 877.0
offset_bottom = 89.0
theme_override_fonts/font = ExtResource("16_otjwt")
theme_override_font_sizes/font_size = 30
text = "0 / 10"

[node name="Frame" type="ColorRect" parent="UI/HUD/InfoBar"]
layout_mode = 0
offset_right = 128.0
offset_bottom = 128.0
color = Color(0, 0, 0, 1)

[node name="EnemyIcon" type="TextureRect" parent="UI/HUD/InfoBar/Frame"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 1032.0
offset_bottom = 1032.0
scale = Vector2(0.11, 0.11)
texture = ExtResource("17_w277s")

[node name="Frame2" type="ColorRect" parent="UI/HUD/InfoBar"]
layout_mode = 0
offset_left = 1152.0
offset_right = 1280.0
offset_bottom = 128.0
color = Color(0, 0, 0, 1)

[node name="BaseIcon" type="TextureRect" parent="UI/HUD/InfoBar/Frame2"]
texture_filter = 1
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 1032.0
offset_bottom = 1032.0
scale = Vector2(0.11, 0.11)
texture = ExtResource("18_jd04r")

[node name="HideHPBar" type="ColorRect" parent="UI/HUD/InfoBar"]
layout_mode = 0
offset_left = 151.0
offset_top = 75.0
offset_right = 471.0
offset_bottom = 105.0
color = Color(0, 0, 0, 0.654902)

[node name="GameControls" type="HBoxContainer" parent="UI/HUD"]
custom_minimum_size = Vector2(150, 75)
layout_direction = 2
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -719.0
offset_top = 2.0
offset_right = -561.0
offset_bottom = 77.0
grow_horizontal = 0
alignment = 2

[node name="Restart" type="TextureButton" parent="UI/HUD/GameControls"]
process_mode = 3
layout_mode = 2
texture_normal = ExtResource("17_od0sx")

[node name="FastForward" type="TextureButton" parent="UI/HUD/GameControls"]
process_mode = 3
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("18_spupq")
texture_pressed = ExtResource("20_0q0yg")

[node name="PausePlay" type="TextureButton" parent="UI/HUD/GameControls"]
process_mode = 3
layout_direction = 3
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("19_78aft")
texture_pressed = ExtResource("20_rr8m3")

[node name="DPBar" type="Control" parent="UI/HUD"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("23_otjwt")
current_dp = 25
dp_gain_rate = 1.2

[node name="DPCount Label" type="Label" parent="UI/HUD/DPBar"]
layout_direction = 2
layout_mode = 0
offset_left = 587.0
offset_top = 93.0
offset_right = 619.0
offset_bottom = 120.0
theme_override_fonts/font = ExtResource("16_otjwt")
theme_override_font_sizes/font_size = 30
text = "DP:"

[node name="DPCount" type="Label" parent="UI/HUD/DPBar"]
layout_mode = 0
offset_left = 624.0
offset_top = 93.0
offset_right = 720.0
offset_bottom = 120.0
theme_override_fonts/font = ExtResource("16_otjwt")
theme_override_font_sizes/font_size = 30
text = "0 / 99"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TowerUI" type="Control" parent="UI/HUD"]
visible = false
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_top = 128.0
offset_right = 256.0
offset_bottom = 704.0
script = ExtResource("22_gggqq")

[node name="ColorRect" type="ColorRect" parent="UI/HUD/TowerUI"]
self_modulate = Color(0, 0, 0, 0.470588)
layout_mode = 2
offset_top = 64.0
offset_right = 256.0
offset_bottom = 512.0
size_flags_vertical = 3

[node name="TowerIcon" type="TextureRect" parent="UI/HUD/TowerUI"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
offset_left = 80.0
offset_top = 144.0
offset_right = 178.0
offset_bottom = 239.0
texture = ExtResource("18_jd04r")

[node name="Tower Name" type="Label" parent="UI/HUD/TowerUI"]
layout_mode = 0
offset_left = 64.0
offset_top = 256.0
offset_right = 192.0
offset_bottom = 288.0
theme_override_fonts/font = ExtResource("16_otjwt")
theme_override_font_sizes/font_size = 25
text = "Chicken Don"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Retreat Button" type="TextureButton" parent="UI/HUD/TowerUI"]
layout_mode = 0
offset_left = 80.0
offset_top = 336.0
offset_right = 176.0
offset_bottom = 432.0
texture_normal = ExtResource("26_od0sx")
texture_pressed = ExtResource("27_spupq")
texture_hover = ExtResource("28_78aft")
stretch_mode = 0

[node name="Retreat Label" type="Label" parent="UI/HUD/TowerUI"]
layout_mode = 0
offset_left = 64.0
offset_top = 448.0
offset_right = 192.0
offset_bottom = 480.0
theme_override_fonts/font = ExtResource("16_otjwt")
theme_override_font_sizes/font_size = 25
text = "Retreat"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Close Button" type="TextureButton" parent="UI/HUD/TowerUI"]
layout_mode = 0
offset_left = 200.0
offset_top = 72.0
offset_right = 250.0
offset_bottom = 122.0
texture_normal = ExtResource("32_8qiig")
stretch_mode = 0

[node name="QuitWindow" type="Control" parent="UI/HUD"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 320.0
offset_top = 224.0
offset_right = 960.0
offset_bottom = 608.0

[node name="TextureRect" type="ColorRect" parent="UI/HUD/QuitWindow"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 128.0
offset_top = 32.0
offset_right = -128.0
offset_bottom = -96.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.788235)

[node name="Label" type="Label" parent="UI/HUD/QuitWindow"]
layout_mode = 0
offset_left = 176.0
offset_top = 56.0
offset_right = 464.0
offset_bottom = 158.0
theme_override_fonts/font = ExtResource("16_otjwt")
theme_override_font_sizes/font_size = 35
text = "Exit

Are you sure you want to exit?"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="No Button" type="Button" parent="UI/HUD/QuitWindow"]
layout_mode = 0
offset_left = 176.0
offset_top = 224.0
offset_right = 280.0
offset_bottom = 264.0
theme_override_fonts/font = ExtResource("16_otjwt")
theme_override_font_sizes/font_size = 25
text = "No"

[node name="Quit Button" type="Button" parent="UI/HUD/QuitWindow"]
layout_mode = 0
offset_left = 360.0
offset_top = 224.0
offset_right = 464.0
offset_bottom = 264.0
theme_override_fonts/font = ExtResource("16_otjwt")
theme_override_font_sizes/font_size = 25
text = "Quit"

[node name="EndGameScreen" parent="UI" instance=ExtResource("34_2fqkj")]
visible = false

[connection signal="pressed" from="UI/HUD/GameControls/Restart" to="UI" method="_on_restart_pressed"]
[connection signal="pressed" from="UI/HUD/GameControls/FastForward" to="UI" method="_on_fast_forward_pressed"]
[connection signal="pressed" from="UI/HUD/GameControls/PausePlay" to="UI" method="_on_pause_play_pressed"]
[connection signal="pressed" from="UI/HUD/TowerUI/Retreat Button" to="UI/HUD/TowerUI" method="OnRetreatPressed"]
[connection signal="pressed" from="UI/HUD/TowerUI/Close Button" to="UI/HUD/TowerUI" method="OnClosePressed"]
[connection signal="pressed" from="UI/HUD/QuitWindow/No Button" to="UI" method="_on_no_button_pressed"]
[connection signal="pressed" from="UI/HUD/QuitWindow/Quit Button" to="UI" method="_on_quit_button_pressed"]
